syntax = "proto3";
package execution;
option go_package = "github.com/cube2222/octosql/execution";
import "values.proto";

message RecordID {
    string ID = 1;
}

message Metadata {
    RecordID id = 1;
    bool undo = 2;
    string eventTimeField = 3;
}

message Record {
    Metadata metadata = 1;
    repeated string fieldNames = 2;
    repeated octosql.Value data = 3;
}